# ROS

./: .clang-format  .gitignore  README.md
docs/: ARCHITECTURE.md  BUGS.md  FEATURES.md  LOGGING.md  PROJECT_STRUCTURE.md  RUNBOOK.md  SETUP_RASPBERRY_PI.md  TECH_STACK.md  TESTING.md
maps/: README.md
scripts/: build_workspace.sh  generate_test_report.sh  install_dependencies.sh  run_lint.sh  run_localization.sh  run_navigation.sh  run_patrol.sh  run_slam.sh  run_tests.sh  run_unit_tests.sh  save_map.sh  source_workspace.sh
src/patrolbot_base/: CMakeLists.txt  package.xml
src/patrolbot_base/config/: base_hardware.yaml  base_mock.yaml
src/patrolbot_base/include/patrolbot_base/: base_node.hpp  mock_motor_driver.hpp  motor_driver.hpp  odometry_integrator.hpp  serial_motor_driver.hpp
src/patrolbot_base/src/: base_node.cpp  main.cpp  mock_motor_driver.cpp  odometry_integrator.cpp  serial_motor_driver.cpp
src/patrolbot_base/test/: test_odometry_integrator.cpp
src/patrolbot_bringup/: CMakeLists.txt  package.xml
src/patrolbot_bringup/launch/: hardware_bringup.launch.py  localization.launch.py  mock_bringup.launch.py  navigation.launch.py  patrol.launch.py  slam.launch.py
src/patrolbot_description/: CMakeLists.txt  package.xml
src/patrolbot_description/launch/: robot_state_publisher.launch.py
src/patrolbot_description/rviz/: patrolbot.rviz
src/patrolbot_description/urdf/: patrolbot.urdf.xacro
src/patrolbot_interfaces/: CMakeLists.txt  package.xml
src/patrolbot_interfaces/msg/: PatrolStatus.msg
src/patrolbot_interfaces/srv/: StartPatrol.srv  StopPatrol.srv
src/patrolbot_mission_manager/: CMakeLists.txt  package.xml
src/patrolbot_mission_manager/config/: patrol_route.yaml
src/patrolbot_mission_manager/include/patrolbot_mission_manager/: mission_manager_node.hpp  mission_state_machine.hpp
src/patrolbot_mission_manager/src/: main.cpp  mission_manager_node.cpp  mission_state_machine.cpp
src/patrolbot_mission_manager/test/: test_mission_state_machine.cpp
src/patrolbot_navigation/: CMakeLists.txt  package.xml
src/patrolbot_navigation/config/: amcl.yaml  nav2_params.yaml
src/patrolbot_navigation/maps/: test_map.pgm  test_map.yaml
src/patrolbot_slam/: CMakeLists.txt  package.xml
src/patrolbot_slam/config/: slam_toolbox_async.yaml
src/patrolbot_system_tests/: CMakeLists.txt  package.xml
src/patrolbot_system_tests/src/: mock_nav2_action_server.cpp
src/patrolbot_system_tests/test/: patrol_retry.yaml  patrol_success.yaml  patrol_timeout.yaml  test_localization_launch.py  test_mock_bringup_launch.py  test_navigation_launch.py  test_patrol_retry_launch.py  test_patrol_success_launch.py  test_patrol_timeout_launch.py  test_slam_launch.py
src/patrolbot_utils/: CMakeLists.txt  package.xml
src/patrolbot_utils/config/: mock_scan.yaml
src/patrolbot_utils/include/patrolbot_utils/: diagnostic_helper.hpp  logging_utils.hpp  parameter_validation.hpp  route_loader.hpp
src/patrolbot_utils/src/: diagnostic_helper.cpp  logging_utils.cpp  mock_scan_publisher.cpp  parameter_validation.cpp  route_loader.cpp
src/patrolbot_utils/test/: test_parameter_validation.cpp  test_route_loader.cpp
