<?xml version="1.0"?>
<package format="3">
  <name>patrolbot_bringup</name>
  <version>0.1.0</version>
  <description>Launch-профили и конфигурация интеграции подсистем PatrolBot.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
