<?xml version="1.0"?>
<package format="3">
  <name>patrolbot_bringup</name>
  <version>0.1.0</version>
  <description>Launch-профили и конфигурация интеграции подсистем PatrolBot.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>MIT</license>

  <!-- Пакет не компилирует код, но всё равно использует ament_cmake для install launch-файлов. -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--
    Bringup зависит от всех runtime-подсистем, которые может включать в профили:
    базовая платформа, описание робота, навигация, SLAM, mission manager и mock-утилиты.
  -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>patrolbot_base</exec_depend>
  <exec_depend>patrolbot_description</exec_depend>
  <exec_depend>patrolbot_mission_manager</exec_depend>
  <exec_depend>patrolbot_navigation</exec_depend>
  <exec_depend>patrolbot_slam</exec_depend>
  <exec_depend>patrolbot_utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
