<?xml version="1.0"?>
<package format="3">
  <name>patrolbot_description</name>
  <version>0.1.0</version>
  <description>Описание робота PatrolBot, URDF/Xacro и launch-файлы публикации состояния.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
