<?xml version="1.0"?>
<package format="3">
  <name>patrolbot_mission_manager</name>
  <version>0.1.0</version>
  <description>Прикладная логика патрулирования PatrolBot и управление waypoint-миссиями.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--
    Mission manager зависит от:
    - nav2_msgs и rclcpp_action для работы с NavigateToPose;
    - patrolbot_interfaces для внешнего API;
    - patrolbot_utils для загрузки маршрутов и общих helpers;
    - tf2 и geometry_msgs для формирования PoseStamped целей.
  -->
  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>patrolbot_interfaces</depend>
  <depend>patrolbot_utils</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
