<?xml version="1.0"?>
<package format="3">
  <name>patrolbot_navigation</name>
  <version>0.1.0</version>
  <description>Конфигурация Nav2, AMCL и карт для PatrolBot.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_regulated_pure_pursuit_controller</exec_depend>
  <exec_depend>nav2_smac_planner</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
