<?xml version="1.0"?>
<package format="3">
  <name>patrolbot_slam</name>
  <version>0.1.0</version>
  <description>Конфигурация slam_toolbox и launch-файлы картографирования PatrolBot.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
