<?xml version="1.0"?>
<package format="3">
  <name>patrolbot_system_tests</name>
  <version>0.1.0</version>
  <description>Интеграционные и launch-тесты PatrolBot.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_msgs</depend>
  <depend>patrolbot_bringup</depend>
  <depend>patrolbot_interfaces</depend>
  <depend>patrolbot_mission_manager</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>pytest</test_depend>
  <test_depend>rclpy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
