<?xml version="1.0"?>
<package format="3">
  <name>patrolbot_utils</name>
  <version>0.1.0</version>
  <description>Общие утилиты PatrolBot: валидация параметров, логирование и вспомогательные узлы.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
